Class based view and crud operation

--- a/CBV_app/templates/CBV_app/basic_app.html
+++ b/CBV_app/templates/CBV_app/basic_app.html
@@ -9,10 +9,18 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{% url 'CBV_app:list' %}"></a></li>
-            <li><a href="{% url 'admin:index' %}"></a></li>
+            <li><a href="{% url 'CBV_app:list' %}">Schools</a></li>
+            <li><a href="{% url 'admin:index' %}">Admin</a></li>
         </ul>
     </nav>
+
+    <div class="container">
+        
+       {% block body_block%}
+
+        {% endblock %} 
+
+    </div>
     
 </body>
 </html>
