--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Base</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="{% url 'CBV_app:list' %}">Schools</a></li>
+            <li><a href="{% url 'admin:index' %}">Admin</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
-        {% block body_block %}
+        
+       {% block body_block%}
 
+        {% endblock %} 
 
-
-        {% endblock%}
     </div>
-
+    
 </body>
 </html>
